// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render a fully filled block list 1`] = `
<section>
  <div
    class="sortableBlockList"
  >
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="icons"
          />
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        />
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block"
      role="switch"
    >
      <div
        class="handle"
      >
        <span
          aria-label="su-more"
          class="su-more sortableHandle"
        />
      </div>
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="icons"
          >
            <span
              aria-label="su-eye"
              class="su-eye"
            />
          </div>
          <span
            aria-label="su-expand-vertical"
            class="su-expand-vertical"
          />
        </header>
        <article
          class="children"
        />
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;

exports[`Should render a non-movable block list 1`] = `
<section>
  <div
    class="sortableBlockList"
  >
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <span
              aria-label="su-more-circle"
              class="su-more-circle clickable"
              role="button"
              tabindex="0"
            />
          </div>
        </header>
        <article
          class="children"
        />
      </div>
    </section>
    <div
      class="addButtonContainer addButtonDivider"
    >
      <button
        class="button secondary hasText addButton"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus buttonIcon"
        />
        <span
          class="buttonText"
        >
          sulu_admin.add_block
        </span>
      </button>
    </div>
    <section
      class="block expanded"
      role="switch"
    >
      <div
        class="content"
      >
        <header
          class="header"
        >
          <div
            class="iconButtons"
          >
            <span
              aria-label="su-more-circle"
              class="su-more-circle clickable"
              role="button"
              tabindex="0"
            />
          </div>
        </header>
        <article
          class="children"
        />
      </div>
    </section>
  </div>
  <div
    class="addButtonContainer"
  >
    <button
      class="button secondary hasText addButton"
      type="button"
    >
      <span
        aria-label="su-plus"
        class="su-plus buttonIcon"
      />
      <span
        class="buttonText"
      >
        sulu_admin.add_block
      </span>
    </button>
  </div>
</section>
`;
